[gd_scene load_steps=5 format=2]

[ext_resource path="res://KeyBox.stylebox" type="StyleBox" id=1]
[ext_resource path="res://ThemeEpisode.tres" type="Theme" id=2]
[ext_resource path="res://fonts/gibberish_big_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Disclaimers.gd" type="Script" id=5]

[node name="Disclaimers" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.14902, 0.117647, 1 )
script = ExtResource( 5 )

[node name="ScreenStretch" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="ScreenStretch"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="ScreenStretch/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -344.0
margin_right = 360.0
margin_bottom = 344.0
rect_min_size = Vector2( 720, 686 )
custom_styles/panel = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="ScreenStretch/ColorRect/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -12.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenStretch/ColorRect/Panel/ScrollContainer"]
margin_right = 676.0
margin_bottom = 1456.0
size_flags_horizontal = 3
custom_constants/separation = 12
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_right = 676.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0, 0, 0, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 676.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Before playing this game for the first time, all players are required to read through this statement in its entirety."
meta_underlined = false
text = "Before playing this game for the first time, all players are required to read through this statement in its entirety."
fit_content_height = true

[node name="RichTextLabel8" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 676.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "While all persons (That’s a weird word, isn’t it?) involved in the making of this game have exercised our best efforts to provide factually accurate information about all topics mentioned, there is no warranty, express or implicit, about the accuracy or exhaustiveness of the information provided therein."
meta_underlined = false
text = "While all persons (That’s a weird word, isn’t it?) involved in the making of this game have exercised our best efforts to provide factually accurate information about all topics mentioned, there is no warranty, express or implicit, about the accuracy or exhaustiveness of the information provided therein."
fit_content_height = true

[node name="RichTextLabel2" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 676.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "This game is a work of fiction. All characters, organizations, and events within the narrative are purely fictional, and not based on those in real life. Any resemblance to real-life people (living or deceased), organizations (current or defunct), or events is, in most cases, unintentional. The viewpoints expressed within the game are those of the fictional characters, and not of hai!touch Studios or anyone who contributed to the making of this game. (Especially the controversial ones.)"
meta_underlined = false
text = "This game is a work of fiction. All characters, organizations, and events within the narrative are purely fictional, and not based on those in real life. Any resemblance to real-life people (living or deceased), organizations (current or defunct), or events is, in most cases, unintentional. The viewpoints expressed within the game are those of the fictional characters, and not of hai!touch Studios or anyone who contributed to the making of this game. (Especially the controversial ones.)"
fit_content_height = true

[node name="RichTextLabel3" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 472.0
margin_right = 676.0
margin_bottom = 612.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "All references to “prize money”, “winnings”, or any other phrases that imply gain, monetary or otherwise, for playing this game, are purely fictional and within the universe of the game, and is not intended to imply a contract involving any payment, monetary or otherwise. I think we both know you're not gonna get rich playing a trivia video game."
meta_underlined = false
text = "All references to “prize money”, “winnings”, or any other phrases that imply gain, monetary or otherwise, for playing this game, are purely fictional and within the universe of the game, and is not intended to imply a contract involving any payment, monetary or otherwise. I think we both know you're not gonna get rich playing a trivia video game."
fit_content_height = true

[node name="RichTextLabel4" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 624.0
margin_right = 676.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "This game is also a parody, and may mention real-life people, places, trademarks, and events, as well as quote excerpts of copyrighted books, television, movies, music, or other media. All such mentions and quotations are intended for the purpose of parody, commentary, and education (which are commonly accepted grounds for Fair Use), as well as comedy. They should not be taken to signify ownership, endorsement, condemnation, or any other significant relationship. Despite the irreverent vibe of the game, it does not mean to offend, or to commit libel or slander. To quote John Oliver, “Jokes are fine”."
meta_underlined = false
text = "This game is also a parody, and may mention real-life people, places, trademarks, and events, as well as quote excerpts of copyrighted books, television, movies, music, or other media. All such mentions and quotations are intended for the purpose of parody, commentary, and education (which are commonly accepted grounds for Fair Use), as well as comedy. They should not be taken to signify ownership, endorsement, condemnation, or any other significant relationship. Despite the irreverent vibe of the game, it does not mean to offend, or to commit libel or slander. To quote John Oliver, “Jokes are fine”."
fit_content_height = true

[node name="RichTextLabel5" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 888.0
margin_right = 676.0
margin_bottom = 1112.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "This game is free and open-source. However, a part of this game relies on a proprietary service (specifically, Firebase Realtime Database by Google) to enable online multiplayer without publicly sharing IP addresses. This feature can be turned off before its first activation, and the rest of the game (including [i]local[/i] multiplayer) will continue to function. This game does not collect your personal data. However, the aforementioned third-party proprietary service [i]may[/i] collect data about your usage, but even if it does, such data is not used by or available to our team."
meta_underlined = false
text = "This game is free and open-source. However, a part of this game relies on a proprietary service (specifically, Firebase Realtime Database by Google) to enable online multiplayer without publicly sharing IP addresses. This feature can be turned off before its first activation, and the rest of the game (including local multiplayer) will continue to function. This game does not collect your personal data. However, the aforementioned third-party proprietary service may collect data about your usage, but even if it does, such data is not used by or available to our team."
fit_content_height = true

[node name="RichTextLabel6" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 1124.0
margin_right = 676.0
margin_bottom = 1208.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Although this game is free and open-source, the performers have not waived copyright from the voice performance therein. If you wish to alter and publish your own derivative, please replace all voice lines included with the game."
meta_underlined = false
text = "Although this game is free and open-source, the performers have not waived copyright from the voice performance therein. If you wish to alter and publish your own derivative, please replace all voice lines included with the game."
fit_content_height = true

[node name="RichTextLabel7" type="RichTextLabel" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 1220.0
margin_right = 676.0
margin_bottom = 1332.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "No animals were harmed in the making of this game, except for that mosquito that flew into my recording booth that day. No child labor or prison labor was used in the making of this game. Obviously. This game uses spaghetti code, but is zero-calorie."
meta_underlined = false
text = "No animals were harmed in the making of this game, except for that mosquito that flew into my recording booth that day. No child labor or prison labor was used in the making of this game. Obviously. This game uses spaghetti code, but is zero-calorie."
fit_content_height = true

[node name="Button" type="Button" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 1344.0
margin_right = 676.0
margin_bottom = 1412.0
disabled = true
text = "Accept"

[node name="ColorRect2" type="ColorRect" parent="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer"]
margin_top = 1424.0
margin_right = 676.0
margin_bottom = 1456.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0, 0, 0, 0 )

[node name="Label" type="Label" parent="ScreenStretch/ColorRect/Panel"]
margin_left = -17.0
margin_top = -7.0
margin_right = 700.0
margin_bottom = 53.0
rect_rotation = -1.4
custom_fonts/font = ExtResource( 3 )
text = "Disclaimers"

[connection signal="gui_input" from="ScreenStretch/ColorRect/Panel/ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
[connection signal="pressed" from="ScreenStretch/ColorRect/Panel/ScrollContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
